WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
93949
Fix crash in http/tests/plugins/plugin-document-has-focus
https://bugs.webkit.org/show_bug.cgi?id=93949
Summary
Fix crash in http/tests/plugins/plugin-document-has-focus
Mike West
Reported
2012-08-14 03:08:51 PDT
Started crashing after
http://trac.webkit.org/changeset/125531
My fault.
http://test-results.appspot.com/dashboards/flakiness_dashboard.html#showExpectations=true&tests=http%2Ftests%2Fplugins%2Fplugin-document-has-focus.html
Attachments
Patch
(1.70 KB, patch)
2012-08-14 03:12 PDT
,
Mike West
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Mike West
Comment 1
2012-08-14 03:12:58 PDT
Created
attachment 158272
[details]
Patch
WebKit Review Bot
Comment 2
2012-08-14 04:39:43 PDT
Comment on
attachment 158272
[details]
Patch Clearing flags on attachment: 158272 Committed
r125543
: <
http://trac.webkit.org/changeset/125543
>
WebKit Review Bot
Comment 3
2012-08-14 04:39:46 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug