Fix crash in http/tests/plugins/plugin-document-has-focus https://bugs.webkit.org/show_bug.cgi?id=93949

Patch by Mike West <mkwst@chromium.org> on 2012-08-14
Reviewed by Jochen Eisinger.

Covered by http/tests/plugins/plugin-document-has-focus.html. If that
doesn't crash, we're good!

* loader/SubframeLoader.cpp:
(WebCore::SubframeLoader::pluginIsLoadable):
    Check the PluginDocument's ownerElement before derefing.

Canonical link: https://commits.webkit.org/111811@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@125543 268f45cc-cd09-0410-ab3c-d52691b4dbfc